tests/golden/err-reexport-outside-window/expected_error.txt
error: `^@` を書けるのは窓口 `_.clum` だけです
 --> ./page.clum:1:2
  |
1 | ^@./lib
  |  ^^^^^^^^^^^^^^ 親へ差し出すのは窓口の仕事です。ファイルの定義は `^` の前置で公開します
